--- a/ex2/style/_variables.scss
+++ b/ex2/style/_variables.scss
@@ -1,4 +1,4 @@
-$primary-color: #F08080;
+$primary-color: #CD5C5C;
 $text-color: #8B0000;
 $font-size-b: 16px;
 $button-hover: darken($primary-color, 30%);
